--- a/resources/sass/includes/header.scss
+++ b/resources/sass/includes/header.scss
@@ -1,5 +1,7 @@
 .main-header {
-    position: fixed;
+    background-color: var(--header-color);
+    position: sticky;
+    z-index: 9999;
     width: 100%;
     top: 0;
     left: 0;
@@ -7,7 +9,8 @@
     box-shadow: -2px -1px 5px 2px rgba(0, 0, 0, 0.15);
 
     .navbar {
-        background-color: var(--header-color);
+        max-width: var(--max-width);
+        margin: auto;
 
         .navbar-nav {
             .nav-item {
